# StockReader

telegram_data_cleaner/: .env.example  .env.production.example  .gitignore  DATABASE_SCHEMA.md  DEPLOYMENT_GUIDE.md  DICTIONARY_GUIDE_FA.md  Dockerfile  FILES_INDEX.md  PHASE1_CHECKLIST.txt  PHASE1_SUMMARY.md  QUICK_DEPLOY.md  QUICK_REFERENCE.md  README.md  ROADMAP_FA.md  SWAGGER_SCREENSHOTS_GUIDE.md  TESTING.md  alembic.ini  docker-compose.production.yml  pyproject.toml  sample_symbols.csv  telegram-data-cleaner.service
telegram_data_cleaner/alembic/: README  env.py
telegram_data_cleaner/alembic/versions/: 2025_11_15_1159-968a0154d887_initial_tables_categories_channels_.py  2025_11_15_1459-2e171cde7221_add_dictionary_system_models.py  2025_11_15_1603-74d7c0b1a1f0_add_extra_data_field_to_dictionary_words.py  2025_11_16_1326-ce268f39526d_add_channel_analytics_table.py  2025_11_16_1547-3f4e2a601607_add_sync_state_table.py  2025_11_16_1754-0b30f7c5b26a_add_api_message_id_field.py  2025_11_16_1811-129d6cc04084_add_time_slot_and_jalali_date_to_.py  2025_11_16_1828-e75add1f7c96_create_sync_states_table_if_not_exists.py
telegram_data_cleaner/docker/: docker-compose.yml
telegram_data_cleaner/docs/: ANALYTICS_GUIDE.md  API_GUIDE.md  PROJECT_SUMMARY.md  QUICK_START.md  SESSION_NOTES.md
telegram_data_cleaner/scripts/: backup.sh  check_setup.py  init_db.py  manual_sync.py  restore.sh  test_api.py  test_dictionary_matching.py  test_dictionary_quick.py  test_phase2_simple.py
telegram_data_cleaner/src/: config.py  database.py  main.py
telegram_data_cleaner/src/core/: exceptions.py  logging.py
telegram_data_cleaner/src/models/: __init__.py  base.py  category.py  channel.py  channel_analytics.py  dictionary.py  dictionary_category.py  dictionary_word.py  message.py  message_dictionary.py  message_tag.py  sync_state.py  tag.py
telegram_data_cleaner/src/schemas/: dictionary.py  ingestion.py
telegram_data_cleaner/src/services/: __init__.py  analytics_aggregation_service.py  ingestion_service.py  scheduler_service.py  smart_sync_service.py
telegram_data_cleaner/src/templates/: analytics.html  dashboard.html  dashboard_old.html  index.html  (+3 more)
telegram_data_cleaner/tests/: __init__.py  conftest.py  test_database.py  test_models.py
(+15 files in other folders)
